--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,5 @@ project(PEX C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(server server.c
-        common.c
-        common.h)
-add_executable(client client.c
-        common.c
-        common.h)
+add_executable(server server.c)
+add_executable(client client.c)
