--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_C_STANDARD 23)
 
 add_executable(server server.c)
 add_executable(client client.c)
+add_executable(reverse_shell reverse_shell.c)
